--- a/assets/scss/nostalgia.scss
+++ b/assets/scss/nostalgia.scss
@@ -89,3 +89,14 @@ body {
 		margin: 0;
 	}
 }
+
+.main-content {
+ background: white;
+ background-size:cover;
+ margin:0;
+ color:black;
+ padding: 25px 0;
+ margin-top: 0;
+ padding: 0;
+ display: block;
+}
