--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -540,11 +540,9 @@ form.reglog {
  margin:0;
  color:white;
  padding: 25px 0;
-
-  .card {
-    color: black;
-    text-shadow: none;
-  }
+ margin-top: -48px;
+ padding: 75px 0px 25px;
+ display: block;
 }
 
 .badge {
