--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -66,7 +66,7 @@
 	<footer>
 		<div class="footer">
 	{% endif %}
-			<img src="/assets/logo-wordmark.png">
+			<img src="/assets/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png">
 			<p><b>{{ __("By the cheeseRox contributors") }}</b> · 2020-{{ 'now' | date('Y') }} 
 			| <b><a href="/statistics.php">{{ __("Statistics") }}</a></b>
 			</p>
