--- a/templates/sbnext-finalium/components/_header.twig
+++ b/templates/sbnext-finalium/components/_header.twig
@@ -1,6 +1,6 @@
 	<div id="masthead-container">
 		<div id="masthead">
-			<a href="/" id="logo-container"><img id="logo" src="/assets/logo-masthead.png"></a>
+			<a href="/" id="logo-container"><img id="logo" src="/assets/logo{% if theme == 'dark' %}-dark{% endif %}-masthead.png"></a>
 			<div id="{% if log %}masthead-loggedin{% else %}masthead-signin{% endif %}" class="masthead-user">
 				{% if log %}
 				<div style="margin-top: 8px;">
