--- a/templates/sbnext-finalium/studio/index.twig
+++ b/templates/sbnext-finalium/studio/index.twig
@@ -13,7 +13,7 @@
 		  <div class="card card-body-fat">
 		  <div class="grid">
 		  <div class="col-md-2">
-        <img class="img-fluid img-rounded" src="../{{ profile_image(userdata.name) }}">
+        <img class="img-fluid rounded" src="../{{ profile_image(userdata.name) }}">
       </div>
 		  <div class="col-md-10">
         <h2>{{ userdata.title }}</h2>
@@ -26,6 +26,13 @@
 		</p>
       </div>
 	  </div>
+	  </div>
+	  <div>
+	{% for video in videos %}
+		{{ vertical_video_box(video) }}
+	{% else %}
+		<p>{{ __("You do not have any uploaded videos!") }}</p>
+	{% endfor %}
 	  </div>
 
 	{% endblock %}
