--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -878,7 +878,7 @@ display: -webkit-box;
 #guide {
     position: fixed;
     left: 0;
-    top: 0;
+    top: 47px;
     bottom: 0;
     width: 17.5em;
     background: $gray-100;
