--- a/assets/scss/nostalgia.scss
+++ b/assets/scss/nostalgia.scss
@@ -4,25 +4,89 @@ body {
 	background: white;
 }
 
-.page-container, #masthead {
+.page-container {
 	width: 960px;
 }
 
 #masthead-container {
-	margin: 8px auto 5px;
+	margin: 2px auto 25px;
 	padding: 0;
 	position: relative;
 	display: block;
 	height: 78px;
 	border-bottom: none;
+	width: 960px;
 }
 
-#masthead {
+.header1 {
+	background-color: #0054B6;
+	background: linear-gradient(to bottom, #0054B6 0%,#0A2D7F 100%);
+	height: 58px;
+	a {
+		color: #03c;
+	}
+	.user-info {
+		align-self: flex-start;
+		margin: 4px 4px 0 0;
+	}
+	.poktube-slogan {
+		padding: 0px 5px 0px 5px; 
+		font-style: italic;
+		color: white;
+	}
+	#logo {
+		height: 40px;
+		width: auto;
+	}
+	#masthead-bar-contents {
+		padding-top: 4px;
+		text-align: right;
+	}
+	.search-form {
+		margin-right: 100px;
+		display: inline;
+	}
+	#masthead-search-terms {
+		height: 25px;
+		widtH: 229px;
+	}
+	.util-item {
+		border-left: 1px solid #000;
+		padding: 0 0 1px 6px;
+		margin-left: 6px;
+		float: left;
+		display: block;
+		color: white;
+	}
+	.util-item.first {
+		border-left: none;
+		padding-left: 1px;
+		margin: 0;
+	}
+	.poktube-search {
+		 color:#e67402; 
+		 font-size: 14px; 
+		 padding: 2px;
+	}
+	.poktube-button {
+		padding: 2px 12px;
+		float: left;
+		margin: 0 6px;
+		white-space: nowrap;
+		text-align: left;
+		color: #02339a;
+		text-decoration: none;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 1em;
+		line-height: 1.2em;
+		outline: none;
+	}
+}
+
 	#bar {
 		height: 35px;
 		background-position: 0 -487px;
 		border: 1px solid #999;
-		clear: both;
 		cursor: default;
 		background: linear-gradient(to bottom, #F2F2F2 0%,#DDDDDD 100%);
 		.nav-item {
@@ -38,57 +102,20 @@ body {
 			border-left: 1px solid #fff;
 			border-right: 1px solid #999;
 		}
+		a {
+			color: #03c;
+		}
 		.nav-item:hover {
 		background: linear-gradient(to bottom, #FFFFFF 60%,#D4D4D4 100%);
 		}
 		.nav-item:active {
 		background: linear-gradient(to bottom, #D4D4D4 40%,#FFFFFF 100%);
 		}
+		#upload-button {
+			margin-right: 5px;
+			float: right;
+		}
 	}
-	a {
-		color: #03c;
-	}
-	.user-info {
-		float: right;
-		margin-top: 16px;
-		text-align: right;
-	}
-	#logo-container, #logo {
-		height: 33px;
-		width: auto;
-		margin-bottom: 8px;
-	}
-	#masthead-bar-contents {
-		padding-top: 4px;
-		text-align: right;
-	}
-	.search-form {
-		margin-right: 100px;
-		display: inline;
-	}
-	#masthead-search-terms {
-		height: 25px;
-		widtH: 229px;
-	}
-	#upload-button {
-		margin-right: 5px;
-	}
-	.button {
-		padding: 0.35em 7px;
-	}
-	.util-item {
-		border-left: 1px solid #aaa;
-		padding: 0 0 1px 6px;
-		margin-left: 6px;
-		float: left;
-		display: block;
-	}
-	.util-item.first {
-		border-left: none;
-		padding-left: 1px;
-		margin: 0;
-	}
-}
 
 .main-content {
  background: white;
