--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -48,7 +48,7 @@
 <body>
 <div id="guide">
 <h2>Guide</h2>
-MYSQL IS A FUCKING RETARD AND WON'T LIST THE RIGHT NAME
+{% if log %}
 {% for user in allUsers %}
 <ul>
 	<li class="guide-channel">
@@ -56,6 +56,15 @@ MYSQL IS A FUCKING RETARD AND WON'T LIST THE RIGHT NAME
 	</li>
 </ul>
 {% endfor %}
+{% else %}
+{% for user in allUsers %}
+<ul>
+	<li class="guide-channel">
+		<a href="/user.php?name={{ user.name }}" class="guide-item"><img class="thumb" src="{{ profile_image(user.name) }}">{{ user.name }}</a>
+	</li>
+</ul>
+{% endfor %}
+{% endif %}
 </div>
 {% if theme == 'bluey' %}
 	{% include "components/katt/_header.twig" %}
