[CodeFactor] Apply fixes to commit 324a875

--- a/assets/scss/nostalgia.scss
+++ b/assets/scss/nostalgia.scss
@@ -30,7 +30,7 @@ body {
 		margin: 4px 4px 0 0;
 	}
 	.poktube-slogan {
-		padding: 0px 5px 0px 5px; 
+		padding: 0 5px; 
 		font-style: italic;
 		color: white;
 	}
