make it march 2021 for nostalgia navbar

--- a/templates/sbnext-finalium/components/nostalgia/_header.twig
+++ b/templates/sbnext-finalium/components/nostalgia/_header.twig
@@ -39,13 +39,14 @@
 		
 		<table cellpadding="2" cellspacing="0" border="0">
 			<tbody><tr>
-				<form method="GET" action="results.php"></form>
+				<form method="GET" action="search.php">
 				<td>
-					<input type="text" value="" name="search" size="30" maxlength="128" class="poktube-search">
+					<input type="text" value="" name="query" size="30" maxlength="128" class="poktube-search">
 				</td>
 				<td>
-					<input class="poktube-button" type="submit" value="Search Videos">
+					<input class="poktube-button" type="submit" value="Search">
 				</td>
+				</form>
 				
 			</tr>
 		</tbody></table>
