--- a/templates/sbnext-finalium/index.twig
+++ b/templates/sbnext-finalium/index.twig
@@ -91,8 +91,10 @@
 		</div>
 	</div>
 	<div class="col-md-4">
-		<h3>{{ __("What's new?") }}</h3>
-		<p>{{ __("Welcome to the brand new cheeseRox! We've heard it, the old layout sucked, so we have redesigned cheeseRox to have a better user interface.") }}</p>
+		<div class="whatsnew">
+			<h3>{{ __("What's new?") }}</h3>
+			<p>{{ __("Welcome to the brand new cheeseRox! We've heard it, the old layout sucked, so we have redesigned cheeseRox to have a better user interface.") }}</p>
+		</div>
 	</div>
 </div>
 </div>
