--- a/assets/scss/nostalgia.scss
+++ b/assets/scss/nostalgia.scss
@@ -9,13 +9,13 @@ body {
 }
 
 #masthead-container {
-	margin: 2px auto 25px;
+	margin: 0 auto 25px;
 	padding: 0;
 	position: relative;
 	display: block;
 	height: 78px;
 	border-bottom: none;
-	width: 960px;
+	width: 100%;
 }
 
 .header1 {
@@ -27,7 +27,7 @@ body {
 	}
 	.user-info {
 		align-self: flex-start;
-		margin: 4px 4px 0 0;
+		margin: 0 4px 0 0;
 	}
 	.poktube-slogan {
 		padding: 0px 5px 0px 5px; 
@@ -35,7 +35,7 @@ body {
 		color: white;
 	}
 	#logo {
-		height: 40px;
+		height: 34px;
 		width: auto;
 	}
 	#masthead-bar-contents {
@@ -70,50 +70,39 @@ body {
 	}
 	.poktube-button {
 		padding: 2px 12px;
-		float: left;
-		margin: 0 6px;
-		white-space: nowrap;
-		text-align: left;
-		color: #02339a;
-		text-decoration: none;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 1em;
-		line-height: 1.2em;
-		outline: none;
 	}
 }
 
 	#bar {
-		height: 35px;
+		height: 28px;
 		background-position: 0 -487px;
 		border: 1px solid #999;
 		cursor: default;
-		background: linear-gradient(to bottom, #F2F2F2 0%,#DDDDDD 100%);
+		background: linear-gradient(to bottom, #585858 0%, #181818 100%);
 		.nav-item {
-			background-position: 0 -487px;
 			text-align: center;
 			float: left;
 			text-decoration: none;
-			font-weight: bold;
 			font-size: 13px;
 			white-space: nowrap;
 			display: block;
-			padding: 9px 7px 10px;
-			border-left: 1px solid #fff;
-			border-right: 1px solid #999;
+			padding: 6px;
 		}
 		a {
-			color: #03c;
+			color: white;
 		}
 		.nav-item:hover {
 		background: linear-gradient(to bottom, #FFFFFF 60%,#D4D4D4 100%);
+		color: black;
 		}
 		.nav-item:active {
 		background: linear-gradient(to bottom, #D4D4D4 40%,#FFFFFF 100%);
+		color: black;
 		}
 		#upload-button {
 			margin-right: 5px;
 			float: right;
+			padding: 4px 10px;
 		}
 	}
 
@@ -126,4 +115,17 @@ body {
  margin-top: 0;
  padding: 0;
  display: block;
+}
+
+.whatsnew {
+	border: 1px solid #F6E4B8;
+	background: #FFFFDB;
+	border-radius: 7px;
+	padding: 10px 15px;
+	h3 {
+		color: #CC6600;
+		font-size: 16px;
+		font-weight: bold;
+		padding-bottom: 5px;
+	}
 }
