cheeserox's growing pains

--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>{% block title %}{% endblock %} - cheeseRox Next</title>
+	<title>{% block title %}{% endblock %} - cheeseRox</title>
 	{% block head %}{% endblock %}
 	<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
@@ -47,7 +47,7 @@
 </head>
 <body>
 <div id="guide">
-<h2>Guide</h2>
+<h3>Guide</h3>
 {% if log %}
 {% for user in allUsers %}
 <ul>
