--- a/templates/sbnext-finalium/components/nostalgia/_header.twig
+++ b/templates/sbnext-finalium/components/nostalgia/_header.twig
@@ -1,11 +1,11 @@
 	<div id="masthead-container">
 <table class="header1" width="100%" bgcolor="#0049C7" cellpadding="0" style="padding: 5px 0px 0px 0px;" cellspacing="0" border="0">
 	<tbody><tr valign="top">
-		<td width="130" rowspan="2" style="padding: 0px 5px 5px 5px;"><a href="index.php"><img id="logo" src="/assets/logo-wordmark-dark.png" alt="cheeseRox" border="0"></a></td>
-		<td valign="top">
+		<td width="130" rowspan="2" style="padding: 0px 5px 5px 5px;vertical-align: middle;"><a href="index.php"><img id="logo" src="/assets/logo-wordmark-dark.png" alt="cheeseRox" border="0"></a></td>
+		<td valign="top" style="vertical-align: middle;">
 		<table align="right" width="100%" cellpadding="0" cellspacing="0" border="0">
 			<tbody><tr valign="top">
-			<td align="left" class="poktube-slogan">Upload, tag and share your videos worldwide!</td>
+			<td align="left" class="poktube-slogan">Unbelivable, This is not PokTube.</td>
 				<td align="right">
 				<table cellpadding="0" cellspacing="0" border="0">
 					<tbody><tr>
@@ -34,23 +34,20 @@
 
 		<tr>
 		<td width="100%">
-		
-				<!--&nbsp;//&nbsp; <a href="browse.php">Browse</a>-->
-		
-		<table cellpadding="2" cellspacing="0" border="0">
-			<tbody><tr>
-				<form method="GET" action="search.php">
-				<td>
-					<input type="text" value="" name="query" size="30" maxlength="128" class="poktube-search">
-				</td>
-				<td>
-					<input class="poktube-button" type="submit" value="Search">
-				</td>
-				</form>
-				
-			</tr>
-		</tbody></table>
-		
+			<table cellpadding="2" cellspacing="0" border="0">
+				<tbody>
+					<tr>
+						<form method="GET" action="search.php">
+						<td>
+							<input type="text" value="" name="query" size="30" maxlength="128" class="poktube-search">
+						</td>
+						<td>
+							<input class="poktube-button" type="submit" value="Search">
+						</td>
+						</form>
+					</tr> 
+				</tbody>
+			</table>
 		</td>
 	</tr>
 
