--- a/templates/sbnext-finalium/githistory.twig
+++ b/templates/sbnext-finalium/githistory.twig
@@ -6,6 +6,7 @@
 <h1>Git commit log</h1>
 <p>This page is used as an alternative for the GitHub commit history page. 
 This currently displays the last 50 commits... and yes, this uses PokTube code.</p>
+<p>The GitHub commit history page can be found <a href="https://github.com/cheeserox/cheeserox/commits/main">here</a>.
 {% for commit in git %}
 <div class="grid" style="gap:0px;margin-bottom: 17.5px;">
 	<div class="col-md-1">
