Copy finalium scss for randley layout
The finalium and randley layouts will have a different look, so using the same scss files isn't a good idea.

--- a/templates/sbrandley/_layout.twig
+++ b/templates/sbrandley/_layout.twig
@@ -15,15 +15,15 @@
 	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa81d">
 	<meta name="msapplication-TileColor" content="#ffa81d">
 	<meta name="theme-color" content="#ffa81d">
-	<link rel="stylesheet" href="/assets/css/style.css" type="text/css">
+	<link rel="stylesheet" href="/assets/css-randley/style.css" type="text/css">
 	{% if theme == 'dark' %}
-		<link id="darkthm" rel="stylesheet" href="/assets/css/darkmode.css" type="text/css">
+		<link id="darkthm" rel="stylesheet" href="/assets/css-randley/darkmode.css" type="text/css">
 	{% endif %}
 	{% if theme == 'bluey' %}
-		<link id="bluey" rel="stylesheet" href="/assets/css/bluey.css" type="text/css">
+		<link id="bluey" rel="stylesheet" href="/assets/css-randley/bluey.css" type="text/css">
 	{% endif %}
 	{% if theme == 'nostalgia' %}
-		<link id="nostalgia" rel="stylesheet" href="/assets/css/nostalgia.css" type="text/css">
+		<link id="nostalgia" rel="stylesheet" href="/assets/css-randley/nostalgia.css" type="text/css">
 	{% endif %}
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
