--- a/assets/scss-randley/_variables.scss
+++ b/assets/scss-randley/_variables.scss
@@ -6,7 +6,7 @@ $black: #000;
 $indigo: #4d27e6;
 $purple: #7942c1;
 $pink: #eb44b0;
-$orange: #ff9900;
+$orange: #e08f52;
 $yellow: #ffbf00;
 $cyan: #1778b8;
 $blue: #1b7fcc;
@@ -54,7 +54,7 @@ $colors: (
   "gray-dark":  $gray-800
 );
 
-$primary:       $blue;
+$primary:       $orange;
 $secondary:     $gray-100;
 $success:       $green;
 $info:          $cyan;
