End my suffering

--- a/assets/scss-randley/_cards.scss
+++ b/assets/scss-randley/_cards.scss
@@ -1,7 +1,7 @@
 .card {
   border: 1px solid $gray-300;
   margin-bottom: 0.75em;
-  background-color: white;
+  background-color: $gray-200;
 }
 
 .card-header {
