Update Randley layout

--- a/templates/sbrandley/_layout.twig
+++ b/templates/sbrandley/_layout.twig
@@ -37,9 +37,8 @@
 		</div>
 	<footer>
 		<div class="footer">
-			<img src="/assets/logo-wordmark-dark.png">
+			<img src="/assets/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png">
 			<p><b>cheeseRox Randley (sic) Layout · {{ __("By the cheeseRox contributors") }}</b> · 2020-{{ 'now' | date('Y') }}
-			| <b><a href="/statistics.php">{{ __("Statistics") }}</a></b>
 			</p>
 			<h5><a href="/githistory.php">{{ __("Git Commit") }} {{ git_commit() }}</a><br></h5>
 			<a class="button button-neutral button-small btnAdd" role="button">Options</a>
