--- a/templates/sbrandley/_layout_index.twig
+++ b/templates/sbrandley/_layout_index.twig
@@ -3,8 +3,10 @@
 {% include "_head.twig" %}
 <!-- smaller version of _layout.twig meant for bradley index -->
 	<body>
-		<div class="container page-container index">
-			{% block content %}{% endblock %}
-		</div>
-	</body>
+		<div class="main-content">
+			<div class="container page-container index">
+				{% block content %}{% endblock %}
+			</div>
+		</body>
+	</div>
 </html>
