--- a/assets/scss-randley/style.scss
+++ b/assets/scss-randley/style.scss
@@ -31,8 +31,8 @@ h4, h5, h6 {
 }
 
 body {
-background: #24211c;
-color: white;
+background: $gray-100;
+color: black;
 font-family: $font;
 font-size: 13px;
 margin: auto;
@@ -42,7 +42,7 @@ height: 100%;
 
 a:link,
 a:visited {
-color: $teal;
+color: $orange;
 text-decoration: none;
 word-break: break-all;
 }
@@ -531,13 +531,14 @@ float: right;
 }
 
 .main-content {
-background-color:#ff9900;
-background: linear-gradient(to bottom, #ffc578 0%,#fb9d23 100%);
-background-size:cover;
+background-color: #ffb552;
+background: linear-gradient(to bottom, #ffb552 0%,#ff9b05 100%);
 margin:0;
-color:white;
 padding: 25px 0;
 display: block;
+height: 100%;
+width: 100%;
+position: absolute;
 }
 
 .badge {
@@ -575,6 +576,7 @@ border: 1px solid #cccccc;
 box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 transition: border linear 0.2s, box-shadow linear 0.2s;
 border-radius: 5px;
+padding: 7px 12px;
 }
 
 textarea:focus,
@@ -1012,6 +1014,7 @@ ul {
 	}
 	ul, li {
 		list-style: none;
+		padding: 0;
 	}
 }
 
@@ -1030,8 +1033,13 @@ ul {
 		max-width: 98vw;
 		border-radius: 5px;
 		box-shadow: 0 0 3px #0005;
-		text-shadow: 0 0 2px black, 0 0 6px black;
 		padding: 4px;
+		background-color: white;
+	}
+	.links {
+		a {
+			padding: 0.25rem 0.25rem;
+		}
 	}
 }
 
