[CodeFactor] Apply fixes to commit 30bf647

--- a/assets/scss-randley/style.scss
+++ b/assets/scss-randley/style.scss
@@ -939,7 +939,7 @@ padding: 0.25em;
 width: 160px;
 overflow: hidden;
 background: #ffffff;
-right: 0px;
+right: 0;
 ul {
 	li {
 		padding: 4px 0;
@@ -1038,7 +1038,7 @@ ul {
 	}
 	.links {
 		a {
-			padding: 0.25rem 0.25rem;
+			padding: 0.25rem;
 		}
 	}
 }
