--- a/templates/sbrandley/index.twig
+++ b/templates/sbrandley/index.twig
@@ -20,9 +20,9 @@
 		</form>
 	</div>
 	<div class="card-body-index">
-	<h1>{{ stats.videocount + stats.imagecount }}</h1>
+	<h1>{{ stats.videocount }}</h1>
 	</div>
 	<div class="card-body-index">
-	<p>Serving {{ stats.videocount }} videos and {{ stats.imagecount }} images!</p>
+	<p>Serving {{ stats.videocount }} posts!</p>
 	</div>
 {% endblock %}
