--- a/templates/sbrandley/components/_header.twig
+++ b/templates/sbrandley/components/_header.twig
@@ -9,10 +9,7 @@
 				<a id="guide-toggle">Guide</a>
 			</li>
 			<li>
-				<a href="browse.php">Videos</a>
-			</li>
-			<li>
-				<a href="browse.php">Artwork</a>
+				<a href="browse.php">Posts</a>
 			</li>
 			<li>
 				<a href="users.php">Users</a>
