--- a/templates/sbrandley/components/smallvideobox.twig
+++ b/templates/sbrandley/components/smallvideobox.twig
@@ -1,13 +1,7 @@
-		<div class="grid" style="margin-bottom: 5px;display:block;">
-			<div class="col-md-4 ">
-				<a href="watch.php?v={{ data.video_id }}">
-						<img class="img-fluid " src="{{ video_thumbnail(data.video_id) }}">
-						<span class="video-time">{{ video_length(data) }}</span>
-				</a>
-			</div>
-			<div class="col-md-8 vid-info">
-				<h3 class="title"><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h3>
-				<span class="stat">by {{ userlink(data, 'u_') }}</span>
-				<span class="stat">{{ data.views }} {{ __("views") }}</span>
-			</div>
+<div class="level">
+	<a class="lvlbox_top" href="post.php?id={{data.id}}">
+		<div>
+			<img id="icon" src="{{ video_thumbnail(data.video_id) }}">
 		</div>
+	</a>
+</div>
