--- a/assets/scss-randley/_backgrounds.scss
+++ b/assets/scss-randley/_backgrounds.scss
@@ -1,6 +1,6 @@
 @each $state, $value in $theme-colors {
   .bg-#{$state} {
-    @include gradient-y($start-color: lighten($value, 5%), $end-color: $value);
+    ////@include gradient-y($start-color: lighten($value, 5%), $end-color: $value);
 	background-color: lighten($value, 4.5%);
   }
 }
