--- a/assets/scss-randley/_variables.scss
+++ b/assets/scss-randley/_variables.scss
@@ -83,4 +83,4 @@ $theme-colors: (
   "carrot": $orange-color,
 );
 
-$font: "Roboto","Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif;
+$font: "Helvetica Neue",Helvetica,Arial,sans-serif;
