--- a/assets/scss-randley/style.scss
+++ b/assets/scss-randley/style.scss
@@ -3,8 +3,6 @@
 /// Variables \\\
 @import "_variables";
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 /* SB CSS STARTS HERE ======================================================== */
 
 @import "_clearfix";
@@ -554,57 +552,6 @@ background-color: #999999;
 border-radius: 3px;
 }
 
-textarea,
-input[type="text"],
-input[type="password"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="date"],
-input[type="month"],
-input[type="time"],
-input[type="week"],
-input[type="number"],
-input[type="email"],
-input[type="url"],
-input[type="search"],
-input[type="tel"],
-input[type="color"],
-.uneditable-input {
-background-color: #ffffff;
-border: 1px solid #cccccc;
-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-transition: border linear 0.2s, box-shadow linear 0.2s;
-border-radius: 5px;
-padding: 7px 12px;
-}
-
-textarea:focus,
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-input[type="date"]:focus,
-input[type="month"]:focus,
-input[type="time"]:focus,
-input[type="week"]:focus,
-input[type="number"]:focus,
-input[type="email"]:focus,
-input[type="url"]:focus,
-input[type="search"]:focus,
-input[type="tel"]:focus,
-input[type="color"]:focus,
-.uneditable-input:focus {
-border-color: rgba(82, 168, 236, 0.8);
-outline: 0;
-outline: thin dotted \9;
--webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
-	0 0 8px rgba(82, 168, 236, 0.6);
--moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
-	0 0 8px rgba(82, 168, 236, 0.6);
-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
-	0 0 8px rgba(82, 168, 236, 0.6);
-}
-
 .form-signin {
 max-width: 250px;
 padding: 19px 29px 29px;
@@ -704,10 +651,6 @@ border-radius: .75rem;
 
 .rounded-4 { border-radius: .5rem; }
 .rounded-5 { border-radius: 1rem; }
-
-.text-shadow-1 { text-shadow: 0 .125rem .25rem rgba(0, 0, 0, .25); }
-.text-shadow-2 { text-shadow: 0 .25rem .5rem rgba(0, 0, 0, .25); }
-.text-shadow-3 { text-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .25); }
 
 .card-cover {
 background-repeat: no-repeat;
@@ -1020,7 +963,7 @@ ul {
 .index {
 	text-align: center;
 	position: absolute;
-	top: 28em;
+	top: 5em;
 	left: 0;
 	right: 0;
 	.logo {
@@ -1042,14 +985,16 @@ ul {
 	}
 }
 
+.container {
+    margin: 0 1rem;
+}
+
 /// Gradients \\\
 @import "_gradients";
 /// Backgrounds \\\
 @import "_backgrounds";
 /// Forums \\\
 @import "_style_forums";
-/// Containers \\\
-@import "_containers";
 /// Images \\\
 @import "_images";
 /// Cards \\\
