--- a/templates/sbrandley/_head.twig
+++ b/templates/sbrandley/_head.twig
@@ -1,10 +1,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>{% block title %}{% endblock %} - cheeseRox</title>
-	{% block head %}{% endblock %}
 	<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
+	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="manifest" href="/assets/icons/site.webmanifest">
 	<link rel="shortcut icon" href="/assets/icons/favicon.ico">
 	<meta name="apple-mobile-web-app-title" content="cheeseRox">
@@ -14,23 +14,6 @@
 	<meta name="msapplication-TileColor" content="#ffa81d">
 	<meta name="theme-color" content="#ffa81d">
 	<link rel="stylesheet" href="/assets/css-randley/style.css" type="text/css">
-	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-	<script src="/assets/common.js"></script>
-	<script>
-		subscribe_string = '{{ __("Follow") }}';
-		unsubscribe_string = '{{ __("Unfollow") }}';
-	</script>
 	<style>
-	{% if pfpRoundness == 'square' %}
-		.rounded {
-			border-radius: 0;
-		}
-	{% elseif pfpRoundness == 'rounded' %}
-		.rounded {
-			border-radius: 10%;
-		}
-	{% endif %}
-	{% block customcss %}{% endblock %}
 	</style>
 </head>
