--- a/templates/sbrandley/_layout.twig
+++ b/templates/sbrandley/_layout.twig
@@ -1,27 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+{% block head %}{% endblock %}
 {% include "_head.twig" %}
-<body>
-<div id="guide">
-<h3>Guide</h3>
-{% if log %}
-{% for user in allUsers %}
-<ul>
-	<li class="guide-channel">
-		<a href="/user.php?name={{ user.u_name }}" class="guide-item"><img class="thumb" src="{{ profile_image(user.u_name) }}">{{ user.u_name }}</a>
-	</li>
-</ul>
-{% endfor %}
-{% else %}
-{% for user in allUsers %}
-<ul>
-	<li class="guide-channel">
-		<a href="/user.php?name={{ user.name }}" class="guide-item"><img class="thumb" src="{{ profile_image(user.name) }}">{{ user.name }}</a>
-	</li>
-</ul>
-{% endfor %}
+{% block customcss %}{% endblock %}
+{% if pfpRoundness == 'square' %}
+	.rounded {
+		border-radius: 0;
+	}
+{% elseif pfpRoundness == 'rounded' %}
+	.rounded {
+		border-radius: 10%;
+	}
 {% endif %}
-</div>
+<body>
 	{% include "components/_header.twig" %}
 	{% block precontent %}{% endblock %}
 	<div class="container page-container">
