--- a/templates/sbrandley/_layout_index.twig
+++ b/templates/sbrandley/_layout_index.twig
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include "_head.twig" %}
+<style>
+body {
+	background: #ffb552 !important;
+}
+</style>
 <!-- smaller version of _layout.twig meant for bradley index -->
 	<body>
 		<div class="main-content">
