--- a/templates/sbrandley/_layout_index.twig
+++ b/templates/sbrandley/_layout_index.twig
@@ -11,6 +11,8 @@ body {
 		<div class="main-content">
 			<div class="container page-container index">
 				{% block content %}{% endblock %}
+				<p>{{ __("By Chaz \"Gamerappa\" Péloquin and the cheeseRox contributors") }} · 2020-{{ 'now' | date('Y') }}
+				</p>
 			</div>
 		</body>
 	</div>
