remove "katt" theme
jesus christ, what in the world.

--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -19,9 +19,6 @@
 	{% if theme == 'dark' %}
 		<link id="darkthm" rel="stylesheet" href="/assets/css/darkmode.css" type="text/css">
 	{% endif %}
-	{% if theme == 'bluey' %}
-		<link id="bluey" rel="stylesheet" href="/assets/css/bluey.css" type="text/css">
-	{% endif %}
 	{% if theme == 'nostalgia' %}
 		<link id="nostalgia" rel="stylesheet" href="/assets/css/nostalgia.css" type="text/css">
 	{% endif %}
@@ -92,7 +89,7 @@
 			</p>
 			<h5><a href="/githistory.php">{{ __("Git Commit") }} {{ git_commit() }}</a><br></h5>
 			<a class="button button-neutral button-small btnAdd" role="button">Options</a>
-			<div id="myModal" class="bg-light" style="padding:0.3em;">
+			<div id="myModal" class="bg-neutral" style="padding:0.3em;">
 
 			</div>
 		</div>
