bring back the rain!

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -534,11 +534,11 @@ form.reglog {
 }
 
 .main-content {
- background-color:#ff9900;
- background: linear-gradient(to bottom, #ffc578 0%,#fb9d23 100%);
+ background-image: url("/assets/rain.jpg");
  background-size:cover;
  margin:0;
  color:white;
+ text-shadow: black 1px 1px 5px;
  padding: 25px 0;
  margin-top: -48px;
  padding: 75px 0px 25px;
