--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -545,6 +545,10 @@ form.reglog {
  display: block;
 }
 
+.main-content .button {
+  text-shadow: none;
+}
+
 .badge {
   display: inline-block;
   padding: 5px;
